scaffold/typescript-go-main/testdata/baselines/reference/submodule/compiler/jsdocTypedefNoCrash2.errors.txt
export.js(1,13): error TS8008: Type aliases can only be used in TypeScript files.


==== export.js (1 errors) ====
    export type foo = 5;
                ~~~
!!! error TS8008: Type aliases can only be used in TypeScript files.
    /**
     * @typedef {{
     * }}
     */
    export const foo = 5;